// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test covisits are added if available. should add covisites to item 1`] = `
Object {
  "covisits": Array [],
  "slug": "activite-partielle-chomage-partiel",
  "source": "fiches_ministere_travail",
}
`;

exports[`Test covisits are added if available. should not fail with other item 1`] = `
Object {
  "covisits": undefined,
  "slug": "fake",
  "source": "fiches_ministere_travail",
}
`;
